--- a/examples/OCRAgency/configs/xinhai_ocr_agency.yaml
+++ b/examples/OCRAgency/configs/xinhai_ocr_agency.yaml
@@ -4,7 +4,15 @@ arena:
     - "[Multicast]"
     - "[Broadcast]"
     - "[Endcast]"
-
+  llm: &llm
+    model: Qwen2.5-7B-Instruct
+    api_key: EMPTY
+    api_base: http://localhost:40002/v1
+    do_sample:
+    temperature:
+    top_p:
+    max_new_tokens:
+    num_return_sequences:
   prompts:
     routing_prompt: &routing_prompt |-
       Now, you are working for an OCR Agency, playing the role of {agent_name}. 
@@ -103,7 +111,7 @@ arena:
       locale: zh
       allowed_routing_types:
         - "[Unicast]"
-      llm: Qwen2.5-7B-Instruct
+      llm: *llm
     - agent_type: simple
       agent_id: 1
       name: receptionist
@@ -113,7 +121,7 @@ arena:
       prompt_template: *receptionist_prompt
       locale: en
       allowed_routing_types: *allowed_routing_types
-      llm: Qwen2.5-7B-Instruct
+      llm: *llm
     - agent_type: mllm
       agent_id: 2
       name: mllm
@@ -123,8 +131,11 @@ arena:
       prompt_template: *mllm_prompt
       locale: en
       allowed_routing_types: *allowed_routing_types
-      llm: Qwen2.5-7B-Instruct
-      mllm: Qwen2-VL-7B-Instruct
+      llm: *llm
+      mllm:
+        model: Qwen2-VL-7B-Instruct
+        api_key: EMPTY
+        api_base: http://localhost:40002/v1
     - agent_type: ocr
       agent_id: 3
       name: ocr
@@ -134,4 +145,4 @@ arena:
       prompt_template: *ocr_prompt
       locale: en
       allowed_routing_types: *allowed_routing_types
-      llm: Qwen2.5-7B-Instruct
+      llm: *llm
