--- a/backend/docker/pip.conf
+++ b/backend/docker/pip.conf
@@ -1,2 +1,3 @@
 [global]
-index-url = https://mirrors.sustech.edu.cn/pypi/simple
+# index-url = https://mirrors.sustech.edu.cn/pypi/simple
+index-url = https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple
