--- a/backend/docker/Dockerfile
+++ b/backend/docker/Dockerfile
@@ -1,8 +1,9 @@
-ARG IMG_TAG=2.5.1-cuda12.1-cudnn9-devel
+ARG IMG_TAG=2.4.0-cuda12.1-cudnn9-devel
 ARG IMG_REPO=pytorch
 
 FROM pytorch/$IMG_REPO:$IMG_TAG
 
+RUN apt-get clean
 RUN apt-get update
 
 RUN apt-get -y install curl git
@@ -13,7 +14,7 @@ COPY pip.conf /root/.config/pip/pip.conf
 
 RUN pip install python-multipart sse_starlette chromadb sentence_transformers
 
-#RUN pip install vllm==0.6.3
+RUN pip install vllm
 # Install vLLM with CUDA 11.8.
 #ARG VLLM_VERSION=0.6.3.post1
 #ARG PYTHON_VERSION=311
@@ -27,14 +28,11 @@ RUN mkdir -p ${WORK_DIR}/related_repos
 
 COPY --from=root related_repos/  ${WORK_DIR}/related_repos
 
-WORKDIR ${WORK_DIR}/related_repos/vllm
-RUN python use_existing_torch.py
-RUN git config --global http.version HTTP/1.1
-RUN pip install -r requirements-build.txt
-RUN pip install -e . --no-build-isolation
-
-WORKDIR ${WORK_DIR}/related_repos/LLaMA-Factory
-RUN pip install -e .
+# WORKDIR ${WORK_DIR}/related_repos/vllm
+# RUN python use_existing_torch.py
+# RUN git config --global http.version HTTP/1.1
+# RUN pip install -r requirements-build.txt
+# RUN pip install -e . --no-build-isolation
 
 WORKDIR ${WORK_DIR}/related_repos/transformers
 RUN pip install -e .
