--- a/examples/OCRAgency/docker-compose.yml
+++ b/examples/OCRAgency/docker-compose.yml
@@ -115,7 +115,7 @@ services:
       timeout: 10s
       retries: 120
   llm: # Bridged LLM
-    image: xinhai
+    image: xinhai_backend
     depends_on:
       controller:
         condition: service_healthy
@@ -166,7 +166,7 @@ services:
       timeout: 10s
       retries: 120
   mllm: # Bridged MLLM
-    image: xinhai
+    image: xinhai_backend
     depends_on:
       controller:
         condition: service_healthy
