--- a/examples/OCRAgency/docker-compose.yml
+++ b/examples/OCRAgency/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - ${FRONTEND_PORT}:8080
       - ${CONTROLLER_PORT}:5000
     environment:
+      STATIC_PATH: /usr/share/xinhai/backend/src/static
       PYTHONPATH: /usr/share/xinhai/backend/src
     command: python -m xinhai.controller --host 0.0.0.0 --port 5000
     healthcheck:
