fix chat message

--- a/examples/OCRAgency/.env.example
+++ b/examples/OCRAgency/.env.example
@@ -37,5 +37,6 @@ LLM_MODEL_TEMPLATE=qwen
 MLLM_MODEL_PATH=Qwen2-VL-7B-Instruct
 MLLM_MODEL_NAME=Qwen2-VL-7B-Instruct
 MLLM_MODEL_TEMPLATE=qwen2_vl
+MLLM_LIMIT_MM_PER_PROMPT=3
 
 AGENCY_NAME=xinhai_ocr_agency
